--- a/.gitattributes
+++ b/.gitattributes
@@ -406,7 +406,35 @@ document.write(Date());
               document.getElementById("skulls").innerHTML = skulls;
             };
           </script>
-          </div13>
+          </div14>
+          </div12>
+          <style>
+        div14 {
+          background-color: black;
+          width: 100px;
+          border: 3px solid darkred;
+          padding: 25px;
+          margin: 20px;
+          display: inline-block;
+        }
+      </style>
+      <div14>
+        <img src="https://live.staticflickr.com/65535/51692042335_475a6a5e34_t.jpg" width="99" height="100" alt="wither skull">
+        <p style="font-size:25px;font-weight:bold;color:#ff3312;">1 skull for a stack of sea lanterns
+          <p>
+          </p>
+          <style>
+          </style>
+          <!--- Don't use the same function twice : ) --->
+               <input type="button" value="trade! " onClick="onsea1(); onsea();" /></button>
+          <script type="text/javascript">
+            var skulls = 0;
+            function onsea1() {
+              skulls += 1;
+              document.getElementById("skulls").innerHTML = skulls;
+            };
+          </script>
+          </div14>
 <script>
 
                 var clicks = 0;
@@ -618,6 +646,18 @@ document.write(Date());
                     document.getElementById("back").remove(button) ;
                   }
                 </script>
+                <script>
+ function onsea() {
+    var newItem = document.createElement("dive") ;
+    newItem.innerHTML = "<font color=green><p></ul> stack of sea lanterns</p>" ;
+    document.getElementById("button").appendChild(newItem)
+    newItem.onclick = removeItem;
+    document.getElementById("list").appendChild(newItem)
+  }
+  function removeItem() {
+    document.getElementById("back").remove(button) ;
+  }
+</script>
                 <body>
 
        <run style="color:yellow;">
